# secure-microphone

./: .gitignore  README.md  build-all.sh  configure.sh  install-dependencies.sh  start-mic-server.sh  start-netlog-server.sh  upload-certificate.sh
netlog-monitor/: CMakeLists.txt
netlog-monitor/config/: config-template.ini
netlog-monitor/src/: main.cpp  netlog_monitor.cpp  netlog_monitor.h
secure-mic/: .gitignore  README.md  platformio-config.py  platformio.ini  upload-certificates.sh
secure-mic-monitor/: .gitignore  CMakeLists.txt  secure-mic-monitor.py
secure-mic-monitor/cert/: tls-cert-hoegarden.pem  tls-key-hoegarden.pem
secure-mic-monitor/config/: config-template.ini
secure-mic-monitor/src/: ip_mic_monitor.cpp  ip_mic_monitor.hpp  main.cpp
secure-mic-monitor/test/: audio_format_test.py
secure-mic/cert/: cert-upload-command.sh  ssl-cert.pem  ssl-key.pem  tls-cert-gecko.pem  tls-key-gecko.pem  tls-key-smartmirror7.pem
secure-mic/config/: config-template.ini
secure-mic/scripts/training/: .gitignore  README.md  setup-python.sh  start-jupyter-notebook.sh  train_micro_speech_model.ipynb
secure-mic/src/: main.cpp  netlog.cpp  netlog.h  wifi_client.cpp  wifi_client.h
secure-mic/src/hotword/: audio_provider.cpp  audio_provider.h  command_responder.cpp  command_responder.h  main_functions.cpp  main_functions.h
secure-mic/src/hotword/micro_features/: micro_model_settings.cpp  micro_model_settings.h
training/: .gitignore  README.md  common-util.sh  setup-python.sh  start-jupyter-notebook.sh  start-tensorboard.sh  train_micro_speech_model.ipynb
training/models_archive/9words/: float_model.tflite  jupyter_model_log.txt  jupyter_train_log.txt  micro_speech_model_data.cpp  model.tflite  wanted_words.txt
training/models_archive/9words/logs/train/: events.out.tfevents.1693813181.twix
training/models_archive/9words/logs/validation/: events.out.tfevents.1693813480.twix
training/models_archive/9words/saved_model/: saved_model.pb
training/models_archive/9words/saved_model/variables/: variables.data-00000-of-00001  variables.index
training/models_archive/demo/: train_micro_speech_model.ipynb  wanted_words.txt
training/models_archive/marvin/: float_model.tflite  jupyter_model_log.txt  jupyter_train_log.txt  micro_speech_model_data.cpp  model.tflite  train_micro_speech_model.ipynb  wanted_words.txt
training/models_archive/marvin/logs/train/: events.out.tfevents.1693409499.twix
training/models_archive/marvin/saved_model/: saved_model.pb
(+3 files in other folders)
